# email-cron

./: .env.example  .gitignore  Cargo.toml  README.md  email-cron-armv7
scripts/: build.sh  git-sparse-checkout.sh
src/: main.rs
