[package]
name = "email-cron"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true  # Strip debug symbols.
opt-level = "z"  # Optimize for size.
lto = true  # Enable link-time optimization.
codegen-units = 1  # Use a single codegen unit.
panic = "abort"  # Abort on panic.

[dependencies]
imap = "2.4.1"
native-tls = {version = "0.2.13", features = ["vendored"]}
chrono = "0.4.39"
unic-emoji-char = "0.9.0"
unicode-segmentation = "1.12.0"
regex = "1.11.1"
dotenv = "0.15.0"
rfc2047-decoder = "1.0.6"
